--- a/animation.css
+++ b/animation.css
@@ -33,6 +33,16 @@ body {
     background-color: #8b0000;
     box-shadow: 0 4px 8px rgba(255,0,0,0.5);
 }
+video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
 .maze { /*פה העיצוב של המבוך עצמו*/
     width: 600px;
     height: 600px;
